syntax = "proto3";

package com.ecommerce.product_service;

option java_multiple_files = true;
option java_package = "com.ecommerce.product_service.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc decreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse);
  rpc increaseStock(IncreaseStockRequest) returns (IncreaseStockResponse);
  rpc createProduct(ProductRequest) returns (ProductResponse);
  rpc editProduct(EditProductRequest) returns (ProductResponse);
  rpc deleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message ProductItem {
  string product_id = 1;
  int32 quantity = 2;
}

message DecreaseStockRequest {
  repeated ProductItem items = 1; // Danh s치ch c치c ProductItem
}

message IncreaseStockRequest {
  repeated ProductItem items = 1; // Danh s치ch c치c ProductItem
}

message ProductRequest {
  string shopId = 1;
  string name = 2;
  string description = 3;
  repeated string images = 4;
  repeated string categories = 5;
  string price = 6;
  int32 stock = 7;
}

message EditProductRequest {
  string id = 1;
  string shopId = 2;
  string name = 3;
  string description = 4;
  repeated string images = 5;
  repeated string categories = 6;
  string price = 7;
  int32 stock = 8;
}

message DeleteProductRequest {
  string id = 1;
  string shopId = 2;
}

message DecreaseStockResponse {
  bool isAvailable = 1;
}

message IncreaseStockResponse {

}

message ProductResponse {
  string id = 1;
  string shopId = 2;
  string name = 3;
  string description = 4;
  repeated string images = 5;
  repeated string categories = 6;
  string price = 7;
  int32 stock = 8;
  double rating = 9;
  int32 soldCount = 10;
}

message DeleteProductResponse {
  string isDelete = 1;
}